# Bachelorprojekt

./: .gitignore  .gitmodules  Anmerkungen.txt  CMakeLists.txt  EXTERNAL_LIBRARIES.md  EXTERNA_LIBRARIES.md  runtimes.txt
.github/workflows/: cmake.yml
CMake/: AddDependencies.cmake
simulations/: basicFilledSquare  highFilled  massive  oneparticle  trichter
src/: Bachelorprojekt.cpp  Bachelorprojekt_test.cpp  CMakeLists.txt  Constants.h  Globals.h  Logger.cpp  Logger.h  Matrix.cpp  Matrix.h  Particle.cpp  Particle.h  ParticleAnalyzer.cpp  ParticleAnalyzer.h  ParticleRenderer.cpp  ParticleRenderer.h  SimulationLoader.cpp  SimulationLoader.h  Utilities.cpp  Utilities.h  Vector.cpp  Vector.h
util/graph/: createDensityMap.py  createGraph.py
